# neweraglasses

./: .env.example  .gitignore  README.md  pyproject.toml
apps/mobile-text-scanner/: README.md  settings.gradle.kts
docs/architecture/: ai-prompt-contracts.md  auth-boundary.md  device-adapters.md  document-mvp-multiagent-runbook.md  mobile-text-scanner-auth-transport.md  mobile-text-scanner-execution-plan.md  mvp-execution-plan.md  overview.md  performance-latency.md  pwa-frontend.md  security-implementation.md
docs/examples/: sample-contract-mvp.txt
docs/reference/: recovered-runtime-surface.md  recovery-manifest.md  source-recovery.md
docs/specs/: 0001-platform-foundation.md  0002-pwa-shell.md  0003-document-mvp-hardening.md  0004-auth-boundary.md  0005-mobile-text-scanner.md  README.md  spec-template.md
evals/document_analysis/: README.md
src/new_era/: __init__.py
tests/e2e/: __init__.py  test_mvp_smoke.py
tests/unit/: __init__.py  test_attention_policy.py  test_browser_simulation_adapter.py  test_contract_analyzer.py  test_deliver_lens_command.py  test_document_analysis_jobs.py  test_document_analysis_store.py  test_document_artifact_lifecycle.py  test_document_artifact_sqlite.py  test_document_artifact_store.py  test_document_feedback_metrics.py  test_document_session_service.py  test_evaluate_alert_candidate.py  test_evaluate_document_analysis.py  test_event_metadata.py  test_get_session_trace.py  (+11 more)
tools/: device_bridge_harness.py  evaluate_document_analysis.py  pyc_disassemble.py  pyc_inventory.py  scanner_comparison_harness.py  validate_local.py
(+118 files in other folders)
